--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/MainLayout.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/MainLayout.razor
@@ -28,7 +28,7 @@
         SetCurrentUser.FirstName = "";
         SetCurrentUser.LastName = "";
         SetCurrentUser.Phone = "";
-
+        SetCurrentUser.IsAuthenticated = false;
         uriHelper.NavigateTo("/");
     }
 }
