--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Admin/Create.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Admin/Create.razor
@@ -3,10 +3,19 @@
 @inject NavigationManager uriHelper
 @inject IJSRuntime js
 
-<h3>Create</h3>
+@if (SetCurrentUser.IsAuthenticated == true)
+{
+    <h3>Create</h3>
 
-<Form ButtonText="Lägg till Admin" admin="@admin"
-      OnValidSubmit="@CreateAdmin" />
+    <Form ButtonText="Lägg till Admin" admin="@admin"
+          OnValidSubmit="@CreateAdmin" />
+}
+else
+{
+    <h3>User authentication not found. Please log in..</h3>
+}
+
+
 
 @code {
     Admins admin = new Admins();
