--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Customer/Create.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Customer/Create.razor
@@ -3,10 +3,18 @@
 @inject NavigationManager uriHelper
 @inject IJSRuntime js
 
-<h3>Lägg till en företagskund</h3>
+@if (SetCurrentUser.IsAuthenticated == true)
+{
+    <h3>Lägg till en företagskund</h3>
 
-<Form ButtonText="Lägg till företagskund" customer="@customer"
-      OnValidSubmit="@CreateCustomer" />
+    <Form ButtonText="Lägg till företagskund" customer="@customer"
+          OnValidSubmit="@CreateCustomer" />
+
+}
+else
+{
+    <h3>User authentication token not found. Please log in..</h3>
+}
 
 @code {
     Customers customer = new Customers();
