--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Customer/View.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Customer/View.razor
@@ -3,24 +3,29 @@
 @inject NavigationManager uriHelper
 @inject IJSRuntime js
 
+@if (SetCurrentUser.IsAuthenticated == true)
+{
+    <table id="customers" class="table table-bordered table-danger">
+        <tr id="testing"></tr>
+        <tr><th>Företag: @_customer.Company</th></tr>
+        <tr><th>Address: @_customer.Street</th></tr>
+        <tr><th>Stad: @_customer.City</th></tr>
+        <tr><th>Epost: @_customer.Email</th></tr>
+        <tr><th>Telefon: @_customer.Phone</th></tr>
 
-<table id="customers" class="table table-bordered table-danger">
-    <tr id="testing"></tr>
-    <tr><th>Företag: @_customer.Company</th></tr>
-    <tr><th>Address: @_customer.Street</th></tr>
-    <tr><th>Stad: @_customer.City</th></tr>
-    <tr><th>Epost: @_customer.Email</th></tr>
-    <tr><th>Telefon: @_customer.Phone</th></tr>
+    </table>
 
-</table>
+    <div class="BackButton">
+        <button class="btn btn-dark" @onclick="@GetBackOnePage">Tillbaks till företagskunder</button>
+        <a class="btn btn-success" href="customer/edit/@_customer.Id">Edit</a>
+        <button class="btn btn-danger" @onclick="@(() => Delete(_customer.Id))">Ta bort @_customer.Company</button>
 
-<div class="BackButton">
-    <button class="btn btn-dark" @onclick="@GetBackOnePage">Tillbaks till företagskunder</button>
-    <a class="btn btn-success" href="customer/edit/@_customer.Id">Edit</a>
-    <button class="btn btn-danger" @onclick="@(() => Delete(_customer.Id))">Ta bort @_customer.Company</button>
-
-</div>
-
+    </div>
+}
+else
+{
+    <h3>User authentication token not found. Please log in..</h3>
+}
 
 @code{
     [Parameter] public int customerId { get; set; }
@@ -39,7 +44,7 @@
 
     async Task Delete(int id)
     {
-        
+
         if (await js.InvokeAsync<bool>("confirm", $"Vill du ta bort {_customer.Company}'s med ID: ({_customer.Id}) som kund?"))
         {
 
