--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_Denied/Edit.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_Denied/Edit.razor
@@ -3,9 +3,19 @@
 @inject NavigationManager uriHelper
 @inject IJSRuntime js
 
-<h3>Detaljer om faktura Nr @order.orderId</h3>
-<Form ButtonText="Update" order="order"
-      OnValidSubmit="@Editorder" />
+@if (SetCurrentUser.IsAuthenticated == true)
+{
+    <h3>Detaljer om faktura Nr @order.orderId</h3>
+    <Form ButtonText="Update" order="order"
+          OnValidSubmit="@Editorder" />
+
+}
+else
+{
+    <h3>User authentication token not found. Please log in..</h3>
+
+}
+
 @code {
     [Parameter] public int OrderId { get; set; }
     Orders order = new Orders();
