--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_Denied/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_Denied/FetchData.razor
@@ -2,9 +2,15 @@
 @inject NavigationManager uriHelper
 @inject HttpClient client
 @inject IJSRuntime js
-
-<h3>Nekade orders</h3>
-<small>Orders som operatörer nekat. Byt Operatör</small>
+@if (SetCurrentUser.IsAuthenticated == true)
+{
+    <h3>Nekade orders</h3>
+    <small>Orders som operatörer nekat. Byt Operatör</small>
+}
+else
+{
+    <h3>User authentication token not found. Please log in..</h3>
+}
 
 
 <br>
@@ -17,40 +23,43 @@ else if (nekadeOrders.Count == 0)
 {
     <div class="spinner"></div>
 }
-else
+else if (SetCurrentUser.IsAuthenticated == true)
 {
-    <table class="table table-striped">
-        <thead>
-            <tr>
+    {
+        <table class="table table-striped">
+            <thead>
+                <tr>
 
-                <th>Order ID</th>
-                <th>Arbetsbeskrivning </th>
-                <th>Orsak</th>
-                <th>Övrig information</th>
-                <th>Operatörs ID</th>
+                    <th>Order ID</th>
+                    <th>Arbetsbeskrivning </th>
+                    <th>Orsak</th>
+                    <th>Övrig information</th>
+                    <th>Operatörs ID</th>
 
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (Orders order in nekadeOrders)
-            {
-                if (order.OrderStatus == OrderStatus.NEKAD)
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (Orders order in nekadeOrders)
                 {
-                    <tr>
-                        <td>@order.orderId</td>
-                        <td>@order.orderDescription</td>
-                        <td>@order.OrderDeclineReason</td>
-                        <td>@order.orderInfo</td>
-                        <td>@order.OperatorID</td>
-                        <td><a class="btn btn-success" href="/nekadorder/edit/@order.orderId">Ändra Operatör</a></td>
-                    </tr>
+                    if (order.OrderStatus == OrderStatus.NEKAD)
+                    {
+                        <tr>
+                            <td>@order.orderId</td>
+                            <td>@order.orderDescription</td>
+                            <td>@order.OrderDeclineReason</td>
+                            <td>@order.orderInfo</td>
+                            <td>@order.OperatorID</td>
+                            <td><a class="btn btn-success" href="/nekadorder/edit/@order.orderId">Ändra Operatör</a></td>
+                        </tr>
+                    }
+
                 }
 
-            }
-
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    }
 }
+
 @code {
 
 
