--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_History/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_History/FetchData.razor
@@ -2,42 +2,52 @@
 @inject HttpClient client
 @inject IJSRuntime js
 
+@if (SetCurrentUser.IsAuthenticated == true)
+{<h4>Ange företagsnamn:</h4>
+    <input @bind-value="SearchTerm" @bind-value:event="oninput" />
+}
+else
+{
+    <h3>User authentication token not found. Please log in..</h3>
 
-<h4>Ange företagsnamn:</h4>
-<input @bind-value="SearchTerm" @bind-value:event="oninput" />
+}
 
-<span class="text-muted ml-5">
-    Visar @FilteredToDos.Count av @companyName.Count ordrar
-</span>
+@if (SetCurrentUser.IsAuthenticated == true)
+{
+    <span class="text-muted ml-5">
+        Visar @FilteredToDos.Count av @companyName.Count ordrar
+    </span>
 
-<table id="acceptedTable" class="table table-striped">
-    <thead>
-        <tr>
-            <th>Order ID</th>
-            <th>Företag </th>
-            <th>Arbete startade</th>
-            <th>Arbete avslutades</th>
-            <th>Operatörs ID</th>
-            <th>Orderinfo</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var order in FilteredToDos)
-        {
-            if (order.OrderStatus == OrderStatus.FAKTURA_SKICKAD)
+    <table id="acceptedTable" class="table table-striped">
+        <thead>
+            <tr>
+                <th>Order ID</th>
+                <th>Företag </th>
+                <th>Arbete startade</th>
+                <th>Arbete avslutades</th>
+                <th>Operatörs ID</th>
+                <th>Orderinfo</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var order in FilteredToDos)
             {
-                <tr>
-                    <td>@order.OrderId</td>
-                    <td>@order.Company</td>
-                    <td>@order.OrderStart</td>
-                    <td>@order.OrderEnd</td>
-                    <td><a class="btn btn-success" href="operator/details/@order.OperatorID">@order.OperatorID</a></td>
-                    <td>@order.OrderDescription</td>
-                </tr>
+                if (order.OrderStatus == OrderStatus.FAKTURA_SKICKAD)
+                {
+                    <tr>
+                        <td>@order.OrderId</td>
+                        <td>@order.Company</td>
+                        <td>@order.OrderStart</td>
+                        <td>@order.OrderEnd</td>
+                        <td><a class="btn btn-success" href="operator/details/@order.OperatorID">@order.OperatorID</a></td>
+                        <td>@order.OrderDescription</td>
+                    </tr>
+                }
             }
-        }
-    </tbody>
-</table>
+        </tbody>
+    </table>
+
+}
 
 
 @code {
