--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/PayMentDetail/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/PayMentDetail/FetchData.razor
@@ -3,8 +3,15 @@
 @inject HttpClient client
 @inject IJSRuntime js
 
-<h3>Skicka Fakturor</h3>
-<small>Bästa sidan att besöka. Här får vi betalt!</small>
+@if (SetCurrentUser.IsAuthenticated == true)
+{
+    <h3>Skicka Fakturor</h3>
+    <small>Bästa sidan att besöka. Här får vi betalt!</small>
+}
+else
+{
+    <h3>User authentication token not found. Please log in..</h3>
+}
 
 
 <br>
@@ -17,49 +24,52 @@ else if (fakturaOrders.Count == 0)
 {
     <div class="spinner"></div>
 }
-else
+else if (SetCurrentUser.IsAuthenticated == true)
 {
-    <table class="table table-striped">
-        <thead>
-            <tr>
+    {
+        <table class="table table-striped">
+            <thead>
+                <tr>
 
-                <th>Order ID</th>
-                <th>Arbetsbeskrivning</th>
-                <th>Arbetsorder startar</th>
-                <th>Arbetsorder slut</th>
-                <th>Operatör meddelande</th>
+                    <th>Order ID</th>
+                    <th>Arbetsbeskrivning</th>
+                    <th>Arbetsorder startar</th>
+                    <th>Arbetsorder slut</th>
+                    <th>Operatör meddelande</th>
 
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (Orders order in fakturaOrders)
-            {
-                if (order.OrderStatus == OrderStatus.KLAR)
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (Orders order in fakturaOrders)
                 {
-            <tr>
-                <td>@order.orderId</td>
-                <td>@order.orderDescription</td>
-                <td>@order.orderStart</td>
-                <td>@order.orderEnd</td>
-                <td>@order.OrderCompleteMessage</td>
-                <td>
-                    <a class="btn btn-success" href="/faktura/edit/@order.orderId" >Skicka Faktura</a>
-                </td>
-            </tr>
+                    if (order.OrderStatus == OrderStatus.KLAR)
+                    {
+                        <tr>
+                            <td>@order.orderId</td>
+                            <td>@order.orderDescription</td>
+                            <td>@order.orderStart</td>
+                            <td>@order.orderEnd</td>
+                            <td>@order.OrderCompleteMessage</td>
+                            <td>
+                                <a class="btn btn-success" href="/faktura/edit/@order.orderId">Skicka Faktura</a>
+                            </td>
+                        </tr>
+                    }
+
                 }
 
-            }
-
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    }
 }
+
 @code {
 
 
     public List<Orders> fakturaOrders { get; set; } = new List<Orders>();
     public int CompletedToken { get; set; } = 1;
     protected override async Task OnInitializedAsync()
-    {       
+    {
         fakturaOrders = await client.GetFromJsonAsync<List<Orders>>($"https://webapitodo20200919020315.azurewebsites.net/api/orders");
     }
 
