--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
@@ -1,81 +1,86 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="/start">MAAD Control Center</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
+﻿
+    <div class="top-row pl-4 navbar navbar-dark">
+        <a class="navbar-brand" href="/start">MAAD Control Center</a>
+        <button class="navbar-toggler" @onclick="ToggleNavMenu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/start" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Hem
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="operatorlist">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Operatörer
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="customerlist">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Företagskunder
-            </NavLink>
-        </li>
+    <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+        <ul class="nav flex-column">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="/start" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Hem
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="operatorlist">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Operatörer
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="customerlist">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Företagskunder
+                </NavLink>
+            </li>
 
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/admin">
-                <span class="oi oi-people" aria-hidden="true"></span> Admins
-            </NavLink>
-        </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="/admin">
+                    <span class="oi oi-people" aria-hidden="true"></span> Admins
+                </NavLink>
+            </li>
 
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="activeorders" @onclick="()=>expandSubMenu= !expandSubMenu">
-                <span class="oi oi-cart" aria-hidden="true"></span> Ordrar
-            </NavLink>
-            @if (expandSubMenu)
-            {
-                <ul class="nav flex-column">
-                    <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="order/create">
-                            <span class="oi oi-plus" aria-hidden="true"></span> Skapa en Order
-                        </NavLink>
-                    </li>
-                    <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="activeorders">
-                            <span class="oi oi-globe" aria-hidden="true"></span> Aktiva ordrar
-                        </NavLink>
-                    </li>
-                    <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="ordershistory">
-                            <span class="oi oi-euro" aria-hidden="true"></span> Hantera Fakturor
-                        </NavLink>
-                    </li>
-                </ul>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="activeorders" @onclick="()=>expandSubMenu= !expandSubMenu">
+                    <span class="oi oi-cart" aria-hidden="true"></span> Ordrar
+                </NavLink>
+                @if (expandSubMenu)
+                {
+                    <ul class="nav flex-column">
+                        <li class="nav-item px-3">
+                            <NavLink class="nav-link" href="order/create">
+                                <span class="oi oi-plus" aria-hidden="true"></span> Skapa en Order
+                            </NavLink>
+                        </li>
+                        <li class="nav-item px-3">
+                            <NavLink class="nav-link" href="activeorders">
+                                <span class="oi oi-globe" aria-hidden="true"></span> Aktiva ordrar
+                            </NavLink>
+                        </li>
+                        <li class="nav-item px-3">
+                            <NavLink class="nav-link" href="ordershistory">
+                                <span class="oi oi-euro" aria-hidden="true"></span> Hantera Fakturor
+                            </NavLink>
+                        </li>
+                    </ul>
 
-            }
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/NekadeOrders">
-                <span class="oi oi-inbox" aria-hidden="true"></span> Nekade ordrar
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/Order/History">
-                <span class="oi oi-file" aria-hidden="true"></span> Tidigare ordrar
-            </NavLink>
-        </li>
-    </ul>
-    
-</div>
+                }
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="/NekadeOrders">
+                    <span class="oi oi-inbox" aria-hidden="true"></span> Nekade ordrar
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="/Order/History">
+                    <span class="oi oi-file" aria-hidden="true"></span> Tidigare ordrar
+                </NavLink>
+            </li>
+        </ul>
 
-@code {
-    private bool collapseNavMenu = true;
-    private bool expandSubMenu;
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    </div>
 
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
+    @code {
+        private bool collapseNavMenu = true;
+        private bool expandSubMenu;
+        private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+
+        private void ToggleNavMenu()
+        {
+            collapseNavMenu = !collapseNavMenu;
+        }
     }
+
+
 }
+
