--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_History/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Orders_History/FetchData.razor
@@ -14,9 +14,9 @@ else
 
 @if (SetCurrentUser.IsAuthenticated == true)
 {
-    <span class="text-muted ml-5">
+    @*<span class="text-muted ml-5">
         Visar @FilteredToDos.Count av @companyName.Count ordrar
-    </span>
+    </span>*@
 
     <table id="acceptedTable" class="table table-striped">
         <thead>
